# mtest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  install.yml
cmake/: mtest.cmake  mtestCMakeHelpers.cmake  mtestConfig.cmake  mtestDiscoverTests.cmake  mtestGenerateCTestFile.cmake  mtestInstall.cmake  mtest_add_tests.cmake
example/: CMakeLists.txt  my_test.c
include/: mtest.h
test/: CMakeLists.txt  test_mtest.c
